<resources>
    <string name="app_name">NewRemindMeDesign</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="heading_title">Title</string>
    <string name="hint_select_category">Select Category</string>
    <string name="heading_category">Category</string>
    <string name="heading_payment">Payment</string>
    <string name="hint_select_payment_mode">Select Payment Mode</string>
    <string name="heading_amount">Amount</string>
    <string name="heading_due_date">Due Date</string>
    <string name="heading_Notification">Notify in adv.</string>
    <string name="heading_note">Note</string>
    <string name="heading_spinner">Reminder Type</string>
    <string name="radio_credit_card">Credit Card</string>
    <string name="radio_debit_card">Debit Card</string>
    <string name="radio_net_banking">Net Banking</string>
    <string name="radio_cash">Cash</string>
    <string name="title_add_select_payment_mode">Add Payment Mode</string>
    <string name="hint_notification_before_due_date">On Same Day </string>
    <string name="heading_repeat">Repeat</string>
    <string name="heading_select_payment_option">Select Payment Option</string>
    <string name="radio_btn_card_payment">Cards-Debit/Credit</string>
    <string name="radio_btn_net_banking">Net Banking</string>
    <string name="title_select_category">Select Category</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="cancel_btn_dialog">CANCEL</string>
    <string name="select_title">Select</string>
    <string name="title_add_card_activity">Add a Card</string>
    <string name="title_activity_card_list">Your Cards</string>
    <string name="no_cards_found">No cards found!</string>
    <string name="title_alarm_type">Alarm Type</string>
    <string name="heading_alarm_time">Alarm Time</string>
    <string name="title_reminder_info">Reminder Info</string>
    <string name="no_internet">No Internet</string>
    <string name="check_your_internet">Please check your network connection.</string>
    <string name="hint_text">Click on the plus button below to create a Reminder.</string>
    <string name="hint_none">None</string>
    <string name="no_added_reminder">No Added Reminder</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="select_provider">Select Provider</string>
    <string name="consumer_number">Consumer Number</string>
    <string name="textview_hint">Please enter your Consumer Number</string>
    <string name="alias_name">Alias name</string>
    <string name="name">Name</string>
    <string name="button_confirm">Confirm</string>
    <string name="spinner_provider">Select Insurance Provider</string>
    <string name="edittext_sub_provider">Select Insurance Provider</string>
    <string name="policy_number">Policy Number</string>
    <string name="textview_policy_number">Please enter your Policy  Number</string>
    <string name="agent_name">Agent Name</string>
    <string name="agent_number">Agent Mobile number</string>
    <string name="select_landline_provider">Select Landline Provider</string>
    <string name="landline_number">Landline Number</string>
    <string name="textview_landline_number">Please enter your Landline Number</string>
    <string name="landline_acount_no">Account Number</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_expire">MM/YY</string>
    <string name="card_cvv">cvv(Optional)</string>
    <string name="other_info">Other Information</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="button_add_card">ADD CARD</string>
    <string name="account_number">Account Number</string>
    <string name="select_bank">Select Bank</string>
    <string name="account_user_name">Username</string>
    <string name="ifsc_code">IFSC code (Ex. ABCD0123456)</string>
    <string name="bank_url">Bank URL</string>
    <string name="button_add_acount">ADD ACCOUNT</string>
    <string name="cash_name">Name</string>
    <string name="email_id">E-mail id</string>
    <string name="button_add_cash">ADD</string>
    <string name="common_activity_hint">Click on the plus button below to add an Account.</string>
    <string name="repeat">Repeat</string>
    <string name="tab_daily">Daily</string>
    <string name="tab_weekly">Weekly</string>
    <string name="tab_monthly">Monthly</string>
    <string name="tab_yearly">Yearly</string>
    <string name="repeat_daily">Repeat Every 1 Day</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_info">Payment Info</string>
    <string name="notes">Notes</string>
    <string name="text_dismis">DISMISS</string>
    <string name="general_setting">GENERAL SETTING</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="doller_united_states_of_america">Rupee - India </string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="security_setting">SECURITY SETTING</string>
    <string name="passcode">Change Passcode</string>
    <string name="passcod_disabled">Disabled</string>
    <string name="notification_setting">NOTIFICATION SETTING</string>
    <string name="notification">Notification</string>
    <string name="notification_enabled">Enabled</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="reminder_times">08:00</string>
    <string name="default_notification">Default Notification</string>
    <string name="two_days_before_due_date">2 days before due date</string>
    <string name="sound">Sound</string>
    <string name="sound_disabled">Enabled</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_enabled">Enabled</string>
    <string name="textview_policy_number_hint">Please enter your Policy  Number </string>
    <string name="date">YYYY-MM-DD</string>
    <string name="select_bill">Select Bill</string>
    <string name="list">List</string>
    <string name="fav_reminders">Favorites</string>
    <string name="setting">Setting</string>
    <string name="add_bill">Add Bill</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="select_insurance">Select Insurance</string>
    <string name="select_landline">Select Landline</string>
    <string name="enter_landline_details">Add Landline</string>
    <string name="select_card">Select Card</string>
    <string name="select_account">Select an Account</string>
    <string name="add_account">Add Account</string>
    <string name="your_cash_record">Your Cash Records</string>
    <string name="change_pwd">Change Password</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="cash">Cash</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_bin">Bin</string>
    <string name="nav_backup">Backup</string>
    <string name="nav_restore">Restore</string>
    <string name="nav_support">Support</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_about">About Us</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_general_setting">General Settings</string>
    <string name="nav_recycle">Recycle</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_other">Other</string>
    <string name="nav_header_name">User</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_office">Office</string>
    <string name="fragment_other">Other</string>
    <string name="text_bill_hint">Click on the plus button below to add a bill.</string>
    <string name="text_insurance_hint">Click on the plus button below to add a Insurance.</string>
    <string name="text_landline_hint">Click on the plus button below to add a Landline.</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="electricity_bill">Electricity Bill</string>
    <string name="insurance">Insurance</string>
    <string name="landline">Land Line</string>
    <string name="gas">Gas</string>
    <string name="water">Water Bill</string>
    <string name="select_insurance_provider">Select Insurance Provider</string>
    <string name="bike_insurance">Bike Insurance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="car_insurance">Car Insurance</string>
    <string name="life_insurance">Life Insurance</string>
    <string name="term_insurance">Term Insurance</string>
    <string name="no_notify">No Notify</string>
    <string name="on_same_day">On Same Day</string>
    <string name="one_day_before_due_date">1 day(s) before due date</string>
    <string name="two_day_before_due_date">2 day(s) before due date</string>
    <string name="three_day_before_due_date">3 day(s) before due date</string>
    <string name="four_day_before_due_date">4 day(s) before due date</string>
    <string name="five_day_before_due_date">5 day(s) before due date</string>
    <string name="six_day_before_due_date">6 day(s) before due date</string>
    <string name="seven_day_before_due_date">7 day(s) before due date</string>
    <string name="eight_day_before_due_date">8 day(s) before due date</string>
    <string name="nine_day_before_due_date">9 day(s) before due date</string>
    <string name="ten_day_before_due_date">10 day(s) before due date</string>
    <string name="forever">Forever</string>
    <string name="end_date">End Date</string>
    <string name="number_of_time">Number of times</string>
    <string name="landline_airtel">Airtel Landline</string>
    <string name="landline_bsnl">BSNL Landline</string>
    <string name="landline_tata_gsm">Tata DoCoMo GSM</string>
    <string name="landline_tata_cdma">Tata Docomo CDMA</string>
    <string name="landline_mtnl_delhi">MTNL Delhi</string>
    <string name="landline_mtnl_mumbai">MTNL Mumbai</string>
    <string name="landline_reliance">Reliance</string>
    <string name="bank_axis">Axis Bank</string>
    <string name="bank_hdfc">HDFC Bank</string>
    <string name="bank_icici">ICICI Bank</string>
    <string name="bank_kotak_mahindra">Kotak Mahindra Bank</string>
    <string name="bank_sbi">State Bank of India</string>
    <string name="enable">Enabled</string>
    <string name="disable">Disabled</string>
    <string name="change_text">English</string>
    <string name="bill_added_successfully">Electricity Bill added successfully</string>
    <string name="bill_update_successfully">Electricity Bill updated successfully</string>
    <string name="water_update_successfully">Water updated successfully</string>
    <string name="water_added_successfully">Water Bill added successfully</string>
    <string name="ok">Ok</string>
    <string name="update_bill">Update Electricity Bill</string>
    <string name="update_water">Update Water Bill</string>
    <string name="please_enter_consumer_no">Please enter your Consumer Number</string>
    <string name="update_insurance">Update Insurance</string>
    <string name="please_enter_insurance_no">Please enter your insurance number</string>
    <string name="insurance_added_succesfully">Insurance added Successfully</string>
    <string name="insurance_update_successfully">Insurance updated successfully</string>
    <string name="cancel">Cancel</string>
</resources>