<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"></item>

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/nav_favorites"></item>
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_general_setting"
            android:title="@string/nav_general_setting">
            <menu>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/nav_setting"></item>

            </menu>
        </item>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_communicate"
            android:title="@string/nav_communicate">
            <menu>


                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/nav_share"></item>

            </menu>
        </item>
    </group>

</menu>