<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout style="@style/dialog_main_linear_layout_style">

        <TextView
            style="@style/heading_textview_style"
            android:text="Fill Your card Information" />

        <RelativeLayout style="@style/dialog_relative_layout_style">

            <ImageView
                android:id="@+id/iv_card_number"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_credit_card_black_24dp" />

            <EditText
                android:id="@+id/et_card_number"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_card_number"
                android:hint="@string/card_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="19" />
        </RelativeLayout>

        <RelativeLayout style="@style/dialog_relative_layout_style">

            <ImageView
                android:id="@+id/iv_card_holder"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_person_outline_black_24dp" />

            <EditText
                android:id="@+id/et_card_holder"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_card_holder"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ अआइईउऊऋएऐओऔकखगघङचछजझञाटठडढणतथदधनपफबभमयरलवशषसहक्षत्रज्ञ ा ि ी ु ू ृ े ै ो ौ ं ः "
                android:hint="@string/card_holder_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                style="@style/dialog_relative_layout_style"
                android:layout_marginRight="4dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_validity"
                    style="@style/hint_image_style"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:id="@+id/et_validity"
                    style="@style/edit_text_style"
                    android:layout_toRightOf="@id/iv_validity"
                    android:hint="@string/card_expire" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/dialog_relative_layout_style"
                android:layout_marginLeft="4dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_card_cvv"
                    style="@style/hint_image_style"
                    app:srcCompat="@drawable/ic_edit_black_24dp" />

                <EditText
                    android:id="@+id/et_card_cvv"
                    style="@style/edit_text_style"
                    android:layout_toRightOf="@id/iv_card_cvv"
                    android:digits="1234567890"
                    android:hint="@string/card_cvv"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLength="3" />
            </RelativeLayout>
        </LinearLayout>

        <View
            style="@style/view_style"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            style="@style/heading_textview_style"
            android:text="@string/other_info" />

        <RelativeLayout
            style="@style/dialog_relative_layout_style"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_card_holder_alias_name"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_card_holder_alias"
                android:hint="@string/alias_name"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/iv_card_holder_alias"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_edit_black_24dp" />
        </RelativeLayout>

        <View style="@style/view_style" />

        <LinearLayout style="@style/btn_linear_style">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/btn_style"
                android:text="@string/cancel" />

            <View style="@style/horizontal_view_style" />

            <Button
                android:id="@+id/btn_add"
                style="@style/btn_style"
                android:text="@string/button_add_card" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
