<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">


    <LinearLayout style="@style/dialog_main_linear_layout_style">

        <TextView
            style="@style/heading_textview_style"
            android:text="Fill Information" />

        <RelativeLayout style="@style/dialog_relative_layout_style">

            <ImageView
                android:id="@+id/iv_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

            <ImageView
                android:id="@+id/iv_provider"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/provider" />

            <TextView
                android:id="@+id/tv_provider"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_provider"
                android:hint="@string/select_provider" />
        </RelativeLayout>

        <RelativeLayout style="@style/dialog_relative_layout_style">

            <ImageView
                android:id="@+id/iv_consumer"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_edit_black_24dp" />

            <EditText
                android:id="@+id/inputConsumerNumber"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_consumer"
                android:hint="@string/consumer_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1" />
        </RelativeLayout>

        <RelativeLayout style="@style/dialog_relative_layout_style">

            <ImageView
                android:id="@+id/iv_name"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_person_outline_black_24dp" />

            <EditText
                android:id="@+id/name"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_name"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ अआइईउऊऋएऐओऔकखगघङचछजझञाटठडढणतथदधनपफबभमयरलवशषसहक्षत्रज्ञ ा ि ी ु ू ृ े ै ो ौ ं ः "
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/dialog_relative_layout_style"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/iv_alias"
                style="@style/hint_image_style"
                app:srcCompat="@drawable/ic_edit_black_24dp" />

            <EditText
                android:id="@+id/inputAliasName"
                style="@style/edit_text_style"
                android:layout_toRightOf="@id/iv_alias"
                android:hint="@string/alias_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" />
        </RelativeLayout>

        <View style="@style/view_style" />

        <LinearLayout
            style="@style/btn_linear_style"
            android:layout_marginTop="18dp">

            <Button
                style="@style/btn_style"
                android:text="@string/cancel" />

            <View style="@style/horizontal_view_style" />

            <Button
                style="@style/btn_style"
                android:text="@string/button_add_cash" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>